--- a/Assignment/13TrendMedia/13TrendMedia/Info.plist
+++ b/Assignment/13TrendMedia/13TrendMedia/Info.plist
@@ -4,6 +4,8 @@
 <dict>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>현재 위치를 알기 위해 이 권한이 필요합니다</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
