--- a/Exercise/SeSAC_06Week/SeSAC_06Week/Info.plist
+++ b/Exercise/SeSAC_06Week/SeSAC_06Week/Info.plist
@@ -2,6 +2,12 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>UIAppFonts</key>
+	<array>
+		<string>SCDream2.otf</string>
+		<string>SCDream5.otf</string>
+		<string>SCDream9.otf</string>
+	</array>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleExecutable</key>
