--- a/Exercise/SeSAC_06Week/SeSAC_06Week/Info.plist
+++ b/Exercise/SeSAC_06Week/SeSAC_06Week/Info.plist
@@ -4,6 +4,7 @@
 <dict>
 	<key>UIAppFonts</key>
 	<array>
+		<string>Kyobo Handwriting 2019.otf</string>
 		<string>SCDream2.otf</string>
 		<string>SCDream5.otf</string>
 		<string>SCDream9.otf</string>
